feat(server): revert nginx

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ VITE_CLOUDINARY_URL=
 # SSH_USER=
 #
 # PRIVATE_CONTENT_REPO=
+#
+# Required to generate traefik ssl through cloudflare
+# CF_DNS_API_TOKEN
 # # End Github Secret
 
 # Cloudinary
@@ -19,7 +22,7 @@ CD_CLOUD_NAME=
 
 # # Umami Secret
 # APP_SECRET=
-# ANALYTICS_DATABASE_URL=
+# DATABASE_URL=
 # # End Umami Secret
 
 # These env needed for setting up the initial postgres container environment variables
@@ -27,6 +30,9 @@ CD_CLOUD_NAME=
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+
+# This db is required to spin up the application so it doesn't conflict with analytics db.
+APP_DATABASE_URL=
 
 BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=http://localhost:3000
