feat(api): add rate limiter

--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,8 @@ BETTER_AUTH_URL=http://localhost:3000
 
 # Change this to your email admin. So the app can be determine which account with admin email. You can add more than one email with comma separated value, e.g. admin@gmail.com,admin2@gmail.com
 ADMIN_EMAIL=
+
+# Env for spin up redis docker
+REDIS_HOST=
+REDIS_PORT=6379
+REDIS_PASSWORD=
