--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "@tanstack/react-start": "1.136.18",
     "@tanstack/router-plugin": "1.136.18",
     "@tanstack/start-static-server-functions": "1.136.18",
-    "@tanstack/zod-adapter": "^1.143.11",
     "@tiptap/pm": "^3.14.0",
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
@@ -72,6 +71,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "drizzle-orm": "^0.45.1",
+    "ioredis": "^5.8.2",
     "lenis": "^1.3.15",
     "lodash": "^4.17.21",
     "lucide-react": "^0.554.0",
