--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
+    "vite-bundle-analyzer": "^1.3.2",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0"
   }
