--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.554.0",
     "mime": "^4.1.0",
-    "motion": "^12.23.24",
     "nanoid": "^5.1.6",
     "next-themes": "^0.4.6",
     "nitro": "latest",
@@ -97,9 +96,6 @@
     "@content-collections/core": "^0.12.0",
     "@content-collections/mdx": "^0.2.2",
     "@content-collections/vite": "^0.2.7",
-    "@fontsource-variable/inter": "^5.2.8",
-    "@fontsource-variable/jetbrains-mono": "^5.2.8",
-    "@fontsource-variable/playfair-display": "^5.2.8",
     "@shikijs/rehype": "^3.19.0",
     "@tailwindcss/typography": "^0.5.19",
     "@takumi-rs/core": "^0.57.3",
@@ -118,6 +114,8 @@
     "drizzle-kit": "^0.31.8",
     "esbuild": "^0.27.2",
     "jsdom": "^27.0.0",
+    "tailwindcss-intersect": "^2.2.0",
+    "tailwindcss-motion": "^1.1.1",
     "tsx": "^4.0.0",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.7.2",
