fix(redis): prevent redis conflict with analytics

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ CD_CLOUD_NAME=
 # # Umami Secret
 # APP_SECRET=
 # DATABASE_URL=
+# REDIS_URL=
 # # End Umami Secret
 
 # These env needed for setting up the initial postgres container environment variables
@@ -33,6 +34,7 @@ POSTGRES_PASSWORD=
 
 # This db is required to spin up the application so it doesn't conflict with analytics db.
 APP_DATABASE_URL=
+APP_REDIS_URL=
 
 BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=http://localhost:3000
@@ -44,6 +46,3 @@ ADMIN_EMAIL=
 REDIS_HOST=
 REDIS_PORT=6379
 REDIS_PASSWORD=
-
-# Env for connect to redis
-REDIS_URL=
