--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "--providers.docker.exposedbydefault=false"
       - "--entryPoints.app.address=:80"
       - "--entryPoints.appsecure.address=:443"
+      - "--entryPoints.admin.address=100.100.63.106:443"
       - "--entryPoints.app.http.redirections.entryPoint.to=appsecure"
       - "--entryPoints.app.http.redirections.entryPoint.scheme=https"
       - "--certificatesresolvers.letsencrypt.acme.email=${TRAEFIK_SSL_EMAIL:-hi@alfanjauhari.com}"
@@ -37,6 +38,8 @@ services:
       alfanjauhari_com_analytics:
         condition: service_healthy
       alfanjauhari_com_app:
+        condition: service_started
+      alfanjauhari_com_portainer:
         condition: service_started
 
   alfanjauhari_com_app:
@@ -130,11 +133,28 @@ services:
       - "traefik.http.routers.analytics.tls.certresolver=letsencrypt"
       - "traefik.http.services.analytics.loadbalancer.server.port=3000"
 
+  alfanjauhari_com_portainer:
+    container_name: alfanjauhari_com_portainer
+    image: portainer/portainer-ce:lts
+    restart: always
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+    networks:
+      - web
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.portainer.rule=Host(`portainer.alfanjauhari.com`)"
+      - "traefik.http.routers.portainer.entrypoints=admin"
+      - "traefik.http.routers.portainer.tls.certresolver=letsencrypt"
+      - "traefik.http.services.portainer.loadbalancer.server.port=9000"
+
 volumes:
   app_data:
   traefik-certs:
   db_data:
   redis_data:
+  portainer_data:
 
 networks:
   web:
