fix(tailscale): trying tailscale sidecar

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,38 @@
 services:
+  alfanjauhari_com_tailscale:
+    image: tailscale/tailscale:latest
+    container_name: alfanjauhari_com_tailscale
+    hostname: alfanjauhari-vps
+    cap_add:
+      - NET_ADMIN
+      - SYS_MODULE
+    volumes:
+      - /dev/net/tun:/dev/net/tun
+      - tailscale_data:/var/lib/tailscale
+    env_file: $RUNTIME_ENV_FILE
+    environment:
+      TS_STATE_DIR: /var/lib/tailscale
+      TS_USERSPACE: "false"
+      TS_EXTRA_ARGS: --hostname=alfanjauhari-vps --accept-dns=false
+    restart: unless-stopped
+
+  alfanjauhari_com_traefik_tailscale:
+    image: traefik:v3.6.6
+    container_name: alfanjauhari_com_traefik_tailscale
+    network_mode: "service:alfanjauhari_com_tailscale"
+    depends_on:
+      - alfanjauhari_com_tailscale
+    restart: unless-stopped
+    command:
+      - "--providers.docker.constraints=Label(`traefik.scope`,`admin`)"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entryPoints.admin.address=:443"
+      - "--entryPoints.admin.http.tls=true"
+      - "--log.level=INFO"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
   alfanjauhari_com_traefik:
     image: traefik:v3.6.6
     container_name: alfanjauhari_com_traefik
@@ -12,17 +46,16 @@ services:
       - "--providers.docker.exposedbydefault=false"
       - "--entryPoints.app.address=:80"
       - "--entryPoints.appsecure.address=:443"
-      - "--entryPoints.admin.address=100.100.63.106:443"
       - "--entryPoints.app.http.redirections.entryPoint.to=appsecure"
       - "--entryPoints.app.http.redirections.entryPoint.scheme=https"
       - "--certificatesresolvers.letsencrypt.acme.email=${TRAEFIK_SSL_EMAIL:-hi@alfanjauhari.com}"
       - "--certificatesresolvers.letsencrypt.acme.storage=/certs/acme.json"
       - "--certificatesresolvers.letsencrypt.acme.dnschallenge.provider=cloudflare"
       - "--certificatesresolvers.letsencrypt.acme.dnschallenge.delaybeforecheck=0"
+      - "--providers.docker.constraints=Label(`traefik.scope`,`public`)"
     ports:
       - "80:80"
       - "443:443"
-      - :8080
     networks:
       - web
     volumes:
@@ -38,8 +71,6 @@ services:
       alfanjauhari_com_analytics:
         condition: service_healthy
       alfanjauhari_com_app:
-        condition: service_started
-      alfanjauhari_com_portainer:
         condition: service_started
 
   alfanjauhari_com_app:
@@ -61,6 +92,7 @@ services:
         condition: service_healthy
     labels:
       - "traefik.enable=true"
+      - "traefik.scope=public"
 
       - "traefik.http.routers.app-nonwww.rule=Host(`alfanjauhari.com`)"
       - "traefik.http.routers.app-nonwww.entrypoints=appsecure"
@@ -132,21 +164,20 @@ services:
       - "traefik.http.routers.analytics.entrypoints=appsecure"
       - "traefik.http.routers.analytics.tls.certresolver=letsencrypt"
       - "traefik.http.services.analytics.loadbalancer.server.port=3000"
+      - "traefik.scope=public"
 
   alfanjauhari_com_portainer:
     container_name: alfanjauhari_com_portainer
     image: portainer/portainer-ce:lts
-    restart: always
+    network_mode: "service:alfanjauhari_com_tailscale"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
-    networks:
-      - web
     labels:
       - "traefik.enable=true"
+      - "traefik.scope=admin"
       - "traefik.http.routers.portainer.rule=Host(`portainer.alfanjauhari.com`)"
       - "traefik.http.routers.portainer.entrypoints=admin"
-      - "traefik.http.routers.portainer.tls.certresolver=letsencrypt"
       - "traefik.http.services.portainer.loadbalancer.server.port=9000"
 
 volumes:
@@ -155,6 +186,7 @@ volumes:
   db_data:
   redis_data:
   portainer_data:
+  tailscale_data:
 
 networks:
   web:
