--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "pnpm build:content && pnpm build:og && vite dev --port 3000",
-    "start": "node .output/server/index.mjs",
+    "dev": "pnpm build:content && pnpm build:og && cross-env NODE_ENV=development tsx scripts/serve-dev.ts",
+    "start": "cross-env NODE_ENV=production tsx -r dotenv/config scripts/serve-prod.ts",
     "build": "pnpm build:content && pnpm build:og && vite build && pnpm upload",
     "build:content": "content-collections build",
     "build:og": "tsx ./scripts/generate-og.tsx",
-    "build:scripts": "esbuild scripts/db-init.ts --bundle --packages=external --outfile=scripts/db-init.cjs --platform=node",
+    "build:scripts": "tsx ./build-scripts.ts",
     "upload": "tsx ./scripts/upload-assets.ts",
     "serve": "vite preview",
     "test": "vitest run",
@@ -56,37 +56,34 @@
     "@tanstack/react-form-start": "^1.27.6",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
-    "@tanstack/react-router": "1.136.18",
-    "@tanstack/react-router-devtools": "1.136.18",
-    "@tanstack/react-router-ssr-query": "^1.131.7",
-    "@tanstack/react-start": "1.136.18",
-    "@tanstack/router-plugin": "1.136.18",
-    "@tanstack/start-static-server-functions": "1.136.18",
-    "@tiptap/pm": "^3.14.0",
-    "@tiptap/react": "^3.14.0",
-    "@tiptap/starter-kit": "^3.14.0",
+    "@tanstack/react-router": "1.147.0",
+    "@tanstack/react-router-devtools": "1.147.0",
+    "@tanstack/react-router-ssr-query": "1.147.0",
+    "@tanstack/react-start": "1.147.0",
+    "@tanstack/router-plugin": "1.147.0",
+    "@tanstack/start-static-server-functions": "1.147.0",
     "@unpic/react": "^1.0.1",
     "better-auth": "^1.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "compression": "^1.8.1",
     "drizzle-orm": "^0.45.1",
+    "express": "^5.2.1",
     "ioredis": "^5.8.2",
     "lenis": "^1.3.15",
-    "lodash": "^4.17.21",
     "lucide-react": "^0.554.0",
     "mime": "^4.1.0",
     "nanoid": "^5.1.6",
-    "next-themes": "^0.4.6",
-    "nitro": "latest",
     "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.0",
     "resend": "^6.6.0",
     "sonner": "^2.0.7",
+    "srvx": "^0.10.0",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss-intersect": "^2.2.0",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^4.1.11"
   },
@@ -103,6 +100,8 @@
     "@tanstack/devtools-vite": "^0.3.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
+    "@types/compression": "^1.8.1",
+    "@types/express": "^5.0.6",
     "@types/lodash": "^4.17.21",
     "@types/node": "^22.10.2",
     "@types/pg": "^8.16.0",
@@ -110,11 +109,12 @@
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
     "cloudinary": "^2.8.0",
+    "cross-env": "^10.1.0",
     "dotenv": "^16.0.0",
     "drizzle-kit": "^0.31.8",
     "esbuild": "^0.27.2",
     "jsdom": "^27.0.0",
-    "tailwindcss-intersect": "^2.2.0",
+    "tailwindcss": "^4.1.18",
     "tailwindcss-motion": "^1.1.1",
     "tsx": "^4.0.0",
     "tw-animate-css": "^1.3.6",
