--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "pnpm build:content && pnpm build:og && cross-env NODE_ENV=development tsx scripts/serve-dev.ts",
-    "start": "cross-env NODE_ENV=production tsx -r dotenv/config scripts/serve-prod.ts",
+    "start": "cross-env NODE_ENV=production node -r dotenv/config dist/scripts/serve-prod.js",
     "build": "pnpm build:content && pnpm build:og && vite build && pnpm upload",
     "build:content": "content-collections build",
     "build:og": "tsx ./scripts/generate-og.tsx",
