--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "pnpm build:content && pnpm build:og && cross-env NODE_ENV=development tsx scripts/serve-dev.ts",
-    "start": "cross-env NODE_ENV=production node -r dotenv/config dist/scripts/serve-prod.js",
+    "dev": "cross-env NODE_ENV=development tsx -r dotenv/config scripts/serve.ts",
+    "start": "cross-env NODE_ENV=production node -r dotenv/config dist/scripts/serve.js",
     "build": "pnpm build:content && pnpm build:og && vite build && pnpm upload",
     "build:content": "content-collections build",
     "build:og": "tsx ./scripts/generate-og.tsx",
@@ -76,6 +76,8 @@
     "mime": "^4.1.0",
     "nanoid": "^5.1.6",
     "pg": "^8.16.3",
+    "pino": "^10.1.1",
+    "pino-http": "^11.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.0",
@@ -114,6 +116,7 @@
     "drizzle-kit": "^0.31.8",
     "esbuild": "^0.27.2",
     "jsdom": "^27.0.0",
+    "pino-pretty": "^13.1.3",
     "tailwindcss": "^4.1.18",
     "tailwindcss-motion": "^1.1.1",
     "tsx": "^4.0.0",
