--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "scripts": {
     "dev": "pnpm build:content && pnpm build:og && cross-env NODE_ENV=development tsx watch -r dotenv/config scripts/serve.ts",
     "start": "cross-env NODE_ENV=production node -r dotenv/config dist/scripts/serve.js",
-    "build": "pnpm build:content && pnpm build:og && vite build && pnpm upload",
+    "build": "cross-env SKIP_RATE_LIMIT=1 pnpm build:content && pnpm build:og && vite build && pnpm upload",
     "build:content": "content-collections build",
     "build:og": "tsx ./scripts/generate-og.tsx",
     "build:scripts": "tsx ./build-scripts.ts",
     "upload": "tsx ./scripts/upload-assets.ts",
     "serve": "vite preview",
     "test": "vitest run",
-    "format": "biome format",
+    "format": "biome format --write .",
     "lint": "biome lint",
     "check": "biome check",
     "db:init": "pnpm build:scripts && node scripts/db-init.cjs",
     "db:kit": "drizzle-kit",
-    "typecheck": "tsc -p ./tsconfig.json"
+    "typecheck": "tsc -p ./tsconfig.json",
+    "playwright:install": "playwright install --with-deps chromium",
+    "postinstall": "pnpm playwright:install"
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.20.0",
@@ -105,6 +107,8 @@
     "esbuild": "^0.27.2",
     "jsdom": "^27.0.0",
     "pino-pretty": "^13.1.3",
+    "playwright": "^1.57.0",
+    "rehype-mermaid": "^3.0.0",
     "tailwindcss": "^4.1.18",
     "tailwindcss-motion": "^1.1.1",
     "tsx": "^4.0.0",
